--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
+## APP_ENV=dev ou prod  gstk
 APP_ENV=dev
 APP_SECRET=b0e9243015ebeec90c99009a68dc4322
 ###< symfony/framework-bundle ###
